finished back, still layout issues

--- a/app/assets/stylesheets/pages/_new_flow.scss
+++ b/app/assets/stylesheets/pages/_new_flow.scss
@@ -7,6 +7,9 @@
   label {
     margin-right: 20px;
   }
+  input {
+    width: 200px;
+  }
 }
 
 .new-flow {
